[tool.poetry]
name = "datac-analysis"
version = "0.1.0"
description = "Consumer of Atac feed and schedule updates"
authors = ["Francesco Lucantoni <fran.lucantoni@gmail.com>"]
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.4"
gtfs-realtime-bindings = "1.0.0"
pandas = "^2.3"
matplotlib = "^3.10"
gtfs-kit = "^10.3"
pillow = "^10.4"
pytz = "^2025.2"

[tool.poetry.group.dev.dependencies]
isort = "^6.0"
pylint = "^3.3"
mypy = "^1.17"
black = "^25.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint."MESSAGE CONTROL"]
max-line-length = 120
disable = [
    "missing-module-docstring",
    "missing-class-docstring"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
