[tool.poetry]
name = "datac-analysis"
version = "0.1.0"
description = "Consumer of Atac feed and schedule updates"
authors = ["Francesco Lucantoni <fran.lucantoni@gmail.com>"]
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
folium = "0.20.0"
gtfs-kit = "^10.3"
gtfs-realtime-bindings = "1.0.0"
matplotlib = "^3.10"
notebook = "^7.4"
tqdm = "^4.67.1"
pandas = "^2.3"
pillow = "^10.4"
pyarrow = "^21.0"
pyproj = "3.7.2"
pytz = "^2025.2"
mapclassify = "2.10.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^25.1.0"}
isort = "^6.0"
mypy = "^1.17"
pylint = "^3.3"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint."MESSAGE CONTROL"]
max-line-length = 120
disable = [
    "missing-module-docstring",
    "missing-class-docstring"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
